[gd_scene load_steps=42 format=3 uid="uid://cgd0qkgnstuy0"]

[ext_resource type="Script" path="res://scenes/Level.gd" id="1_7eprk"]
[ext_resource type="Script" path="res://scenes/main.gd" id="1_giui5"]
[ext_resource type="PackedScene" uid="uid://p71xwawyruxj" path="res://modules/module1.tscn" id="3_bagks"]
[ext_resource type="PackedScene" uid="uid://3sve2nrss2io" path="res://modules/module2.tscn" id="4_2u7gq"]
[ext_resource type="PackedScene" uid="uid://bxuqlg64ur4w4" path="res://modules/module3.tscn" id="5_y4kpi"]
[ext_resource type="Script" path="res://scenes/Player.gd" id="7_obtw7"]
[ext_resource type="Script" path="res://scenes/Camera.gd" id="9_q2vtt"]
[ext_resource type="AudioStream" uid="uid://thi3jg21fujs" path="res://art/whoosh-transitions-sfx-03-118230.mp3" id="21_hbci6"]
[ext_resource type="AudioStream" uid="uid://qw28dr16js4p" path="res://art/Jump.wav" id="22_dfi86"]
[ext_resource type="AudioStream" uid="uid://cu6670q5vwp6u" path="res://art/WhatsApp Audio 2025-04-16 at 16.34.10_1a8e3735.mp3" id="23_yvx36"]
[ext_resource type="Script" path="res://scenes/UI.gd" id="26_suufq"]
[ext_resource type="Texture2D" uid="uid://cjrs7pvoojuwq" path="res://art/Ad.png" id="27_wkjpl"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_smuvq"]
transparency = 4
albedo_color = Color(1, 1, 1, 0.74902)

[sub_resource type="BoxMesh" id="BoxMesh_smuft"]
material = SubResource("StandardMaterial3D_smuvq")
size = Vector3(20, 20, 1)

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_8so4n"]
sky_top_color = Color(0.552941, 0.752941, 0.870588, 1)
sky_horizon_color = Color(0.537255, 0.764706, 0.815686, 1)
ground_bottom_color = Color(1, 1, 1, 1)
ground_horizon_color = Color(0.552941, 0.752941, 0.870588, 1)

[sub_resource type="Sky" id="Sky_aqf0r"]
sky_material = SubResource("ProceduralSkyMaterial_8so4n")

[sub_resource type="Environment" id="Environment_jgbfd"]
background_mode = 2
sky = SubResource("Sky_aqf0r")
sky_rotation = Vector3(0, -12.3971, -7.31293)
volumetric_fog_density = 0.5085
volumetric_fog_emission_energy = 554.51
volumetric_fog_gi_inject = 12.75
volumetric_fog_anisotropy = 0.9
volumetric_fog_length = 73.4
volumetric_fog_detail_spread = 6.0
volumetric_fog_ambient_inject = 16.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ig8x8"]
radius = 0.48994

[sub_resource type="Animation" id="Animation_0g6wj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Char:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_qhlru"]
resource_name = "left"
length = 0.35
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Char:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.35),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.314159, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_ej28j"]
resource_name = "liveing"
length = 2.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, true, false, true, true, false, true, true, false, true, true, false, false, true, true, false, true, true, false, true]
}

[sub_resource type="Animation" id="Animation_cxrns"]
resource_name = "right"
length = 0.35
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Char:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.35),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.314159, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n8x0q"]
_data = {
"RESET": SubResource("Animation_0g6wj"),
"left": SubResource("Animation_qhlru"),
"liveing": SubResource("Animation_ej28j"),
"right": SubResource("Animation_cxrns")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_7x6lb"]

[sub_resource type="BoxShape3D" id="BoxShape3D_8whcl"]
size = Vector3(46.7759, 3.62734, 28.4221)

[sub_resource type="BoxShape3D" id="BoxShape3D_l3gmb"]
size = Vector3(11.21, 1, 10.598)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kvny8"]
bg_color = Color(1, 1, 0, 1)
border_color = Color(0.666667, 0.666667, 0.666667, 1)
border_blend = true
corner_radius_top_right = 30
corner_radius_bottom_right = 30
shadow_color = Color(0, 0, 0, 1)
shadow_size = 1
shadow_offset = Vector2(2.395, 10)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_exoay"]
bg_color = Color(0.258824, 0.478431, 0.764706, 1)
border_color = Color(0.666667, 0.666667, 0.666667, 1)
border_blend = true
corner_radius_top_right = 30
corner_radius_bottom_right = 30
shadow_color = Color(0, 0, 0, 1)
shadow_size = 1
shadow_offset = Vector2(2.395, 10)

[sub_resource type="Animation" id="Animation_fmeah"]
resource_name = "Die"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Die:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Die:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_khuum"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Die:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Die:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_063s0"]
_data = {
"Die": SubResource("Animation_fmeah"),
"RESET": SubResource("Animation_khuum")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q1i7w"]
bg_color = Color(0.258824, 0.478431, 0.764706, 1)
border_color = Color(0.666667, 0.666667, 0.666667, 1)
border_blend = true
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_color = Color(0, 0, 0, 1)
shadow_size = 1
shadow_offset = Vector2(2.395, 10)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o61ge"]
bg_color = Color(1, 1, 0, 1)
border_color = Color(0.666667, 0.666667, 0.666667, 1)
border_blend = true
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_color = Color(0, 0, 0, 1)
shadow_size = 1
shadow_offset = Vector2(2.395, 10)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dkcwa"]
bg_color = Color(0.976471, 0.976471, 0, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
expand_margin_left = 50.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mgp7j"]
bg_color = Color(0.835294, 0.835294, 0, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
expand_margin_left = 50.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qnn6c"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xm24m"]
bg_color = Color(0.25098, 0.278431, 0.258824, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_psum2"]
bg_color = Color(0.164706, 0.176471, 0.164706, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3cqcn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qm433"]
bg_color = Color(0.52549, 0.756863, 0.690196, 1)
border_color = Color(0.666667, 0.666667, 0.666667, 1)
border_blend = true
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_color = Color(0, 0, 0, 1)
shadow_size = 1
shadow_offset = Vector2(2.395, 10)

[sub_resource type="BoxOccluder3D" id="BoxOccluder3D_cgepx"]
size = Vector3(0.441309, 2.8001, 4.44301)

[node name="main" type="Node3D"]
script = ExtResource("1_giui5")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, 6.98825e-22, 1, 1.42109e-14, 1, -7.76472e-23, -1, 1.42109e-14, -4.37114e-08, 23.035, 1.92016, 0)
mesh = SubResource("BoxMesh_smuft")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 1.42109e-14, 1, 0, -1, -1.77636e-15, -4.37114e-08, 24.139, 1.92016, 0)
mesh = SubResource("BoxMesh_smuft")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 1.42109e-14, 1, 0, -1, -1.77636e-15, -4.37114e-08, 25.217, 1.92016, 0)
mesh = SubResource("BoxMesh_smuft")

[node name="Level" type="Node3D" parent="."]
script = ExtResource("1_7eprk")
pices = Array[PackedScene]([ExtResource("3_bagks"), ExtResource("4_2u7gq"), ExtResource("5_y4kpi")])

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_jgbfd")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.702692, -0.656934, 0.273243, -0.0493662, 0.338099, 0.939815, -0.709779, -0.673889, 0.205149, 0, 0, 0)
light_energy = 2.0
light_angular_distance = 3.13

[node name="Player" type="CharacterBody3D" parent="."]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0.141172, 0)
collision_layer = 3
collision_mask = 3
script = ExtResource("7_obtw7")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player"]
shape = SubResource("CapsuleShape3D_ig8x8")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player"]
libraries = {
"": SubResource("AnimationLibrary_n8x0q")
}

[node name="MoveAnimationPlayer" type="AnimationPlayer" parent="Player"]
libraries = {
"": SubResource("AnimationLibrary_n8x0q")
}

[node name="Area" type="Area3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.62448, 0)
collision_layer = 3
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player/Area"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.225483, 0)
shape = SubResource("BoxShape3D_7x6lb")

[node name="AreaBoomer" type="Area3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.62448, 0)
collision_layer = 3
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player/AreaBoomer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0247736, -0.45987, 0)
shape = SubResource("BoxShape3D_8whcl")

[node name="AreaMagnet" type="Area3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.62448, 0)
collision_layer = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player/AreaMagnet"]
shape = SubResource("BoxShape3D_l3gmb")

[node name="Camera" type="Node3D" parent="Player"]
transform = Transform3D(-1.45705e-07, 1.32383, -3.05918, 0, 3.05918, 1.32383, 3.33333, 5.78663e-08, -1.33721e-07, -7.153, 4.767, 0)

[node name="Camera" type="Camera3D" parent="Player/Camera"]
transform = Transform3D(1, 1.04805e-13, -1.42109e-13, 1.77636e-15, 1, -5.96046e-08, 0, 5.96046e-08, 1, 0, 0, 0)
current = true
fov = 80.0
script = ExtResource("9_q2vtt")

[node name="JumpSfx" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource("22_dfi86")
volume_db = -5.0

[node name="MoveSfx" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource("21_hbci6")
volume_db = -10.0
pitch_scale = 0.75

[node name="Char" type="Node3D" parent="Player"]

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("26_suufq")

[node name="Coins_Label" type="Label" parent="UI"]
offset_top = 153.0
offset_right = 330.0
offset_bottom = 213.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 41
theme_override_styles/normal = SubResource("StyleBoxFlat_kvny8")
text = "Loading.."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score_Label" type="Label" parent="UI"]
offset_top = 56.0
offset_right = 767.0
offset_bottom = 116.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 41
theme_override_styles/normal = SubResource("StyleBoxFlat_exoay")
text = "Loading.."
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI"]
libraries = {
"": SubResource("AnimationLibrary_063s0")
}

[node name="Die" type="ColorRect" parent="UI"]
visible = false
modulate = Color(1, 1, 1, 0)
offset_left = 75.0
offset_top = 407.0
offset_right = 892.0
offset_bottom = 1174.0
scale = Vector2(0.7, 0.7)
color = Color(0.14902, 0.156863, 0.141176, 1)

[node name="Score_Label" type="Label" parent="UI/Die"]
layout_mode = 0
offset_left = 26.0
offset_top = -18.0
offset_right = 793.0
offset_bottom = 42.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 41
theme_override_styles/normal = SubResource("StyleBoxFlat_q1i7w")
text = "Loading.."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Coins_Label" type="Label" parent="UI/Die"]
layout_mode = 0
offset_left = 153.0
offset_top = 73.0
offset_right = 627.0
offset_bottom = 143.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxFlat_o61ge")
text = "120"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AD" type="Button" parent="UI/Die"]
layout_mode = 0
offset_left = 166.0
offset_top = 410.0
offset_right = 699.0
offset_bottom = 486.0
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_hover_color = Color(0, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 1, 0, 1)
theme_override_constants/outline_size = 8
theme_override_constants/icon_max_width = 1
theme_override_font_sizes/font_size = 49
theme_override_styles/normal = SubResource("StyleBoxFlat_dkcwa")
theme_override_styles/hover = SubResource("StyleBoxFlat_mgp7j")
theme_override_styles/focus = SubResource("StyleBoxEmpty_qnn6c")
text = "Skip"
icon = ExtResource("27_wkjpl")

[node name="Ad" type="Sprite2D" parent="UI/Die/AD"]
position = Vector2(-4, 40)
rotation = -0.623083
texture = ExtResource("27_wkjpl")

[node name="Exit" type="Button" parent="UI/Die"]
layout_mode = 0
offset_left = 183.0
offset_top = 571.0
offset_right = 625.0
offset_bottom = 619.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_constants/icon_max_width = 1
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_xm24m")
theme_override_styles/hover = SubResource("StyleBoxFlat_psum2")
theme_override_styles/focus = SubResource("StyleBoxEmpty_3cqcn")
text = "Exit"
icon = ExtResource("27_wkjpl")

[node name="HignScore" type="Label" parent="UI/Die"]
visible = false
layout_mode = 0
offset_left = 159.0
offset_top = -77.0
offset_right = 633.0
offset_bottom = -29.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_qm433")
text = "High Score!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreTimer" type="Timer" parent="UI"]
wait_time = 0.1
autostart = true

[node name="Items" type="FlowContainer" parent="UI"]
offset_left = 30.0
offset_top = 1044.0
offset_right = 780.0
offset_bottom = 1942.0
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.0164577, 0.999865, 0, -0.999865, -0.0164577, 39.399, 122.439, 0)

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("23_yvx36")
volume_db = -10.0
autoplay = true

[node name="OccluderInstance3D" type="OccluderInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 25.9573, 0, 0)
occluder = SubResource("BoxOccluder3D_cgepx")

[connection signal="body_entered" from="Player/Area" to="Player" method="_on_area_body_entered"]
[connection signal="body_entered" from="Player/AreaBoomer" to="Player" method="_on_area_boomer_body_entered"]
[connection signal="pressed" from="UI/Die/AD" to="UI" method="_on_ad_pressed"]
[connection signal="pressed" from="UI/Die/Exit" to="UI" method="_on_exit_pressed"]
[connection signal="timeout" from="UI/ScoreTimer" to="UI" method="_on_score_timer_timeout"]
